# MaxBridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202606150001_initial.py
src/maxbridge/: __init__.py  main.py
src/maxbridge/api/: dependencies.py  errors.py  routes.py  schemas.py  webhook_adapters.py
src/maxbridge/application/: dto.py  ports.py  services.py  use_cases.py
src/maxbridge/bot/: __init__.py  polling.py
src/maxbridge/domain/: entities.py  exceptions.py
src/maxbridge/infrastructure/: config.py  db.py  gateways.py  models.py  rate_limit.py  repositories.py  unit_of_work.py
tests/: fakes.py  test_services.py  test_use_cases.py  test_webhook_adapters.py
